rework user services and security configuration