@@ -1,7 +1,6 @@
 package de.tigges.tchreservation.user;
 
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
@@ -36,152 +35,177 @@ import de.tigges.tchreservation.user.model.UserRole;
 @RequestMapping("/rest/user")
 public class UserService {
 
-	private final UserRepository userRepository;
-	private final UserDeviceRepository userDeviceRepository;
-	private final ProtocolRepository protocolRepository;
-	private final PasswordEncoder encoder;
-	private final UserUtils userUtils;
+    private final UserRepository userRepository;
+    private final UserDeviceRepository userDeviceRepository;
+    private final ProtocolRepository protocolRepository;
+    private final PasswordEncoder encoder;
+    private final UserUtils userUtils;
 
-	public UserService(UserRepository userRepository, UserDeviceRepository userDeviceRepository,
-			ProtocolRepository protocolRepository, UserUtils userUtils) {
-		this.userRepository = userRepository;
-		this.userDeviceRepository = userDeviceRepository;
-		this.protocolRepository = protocolRepository;
-		this.userUtils = userUtils;
-		encoder = PasswordEncoderFactories.createDelegatingPasswordEncoder();
-	}
+    public UserService(UserRepository userRepository, UserDeviceRepository userDeviceRepository,
+                       ProtocolRepository protocolRepository, UserUtils userUtils) {
+        this.userRepository = userRepository;
+        this.userDeviceRepository = userDeviceRepository;
+        this.protocolRepository = protocolRepository;
+        this.userUtils = userUtils;
+        encoder = PasswordEncoderFactories.createDelegatingPasswordEncoder();
+    }
 
-	@GetMapping("/me")
-	public User getMyUser() {
-		return UserMapper.map(userUtils.getLoggedInUser());
-	}
+    @GetMapping("/me")
+    public User getMyUser() {
+        return UserMapper.map(userUtils.getLoggedInUser());
+    }
 
-	@GetMapping("/all")
-	public @ResponseBody Iterable<User> getAll() {
-		userUtils.verifyHasRole(UserRole.ADMIN);
-		Iterable<UserEntity> allUsers = userRepository.findAll();
-		return StreamSupport.stream(allUsers.spliterator(), false).map(UserMapper::map).collect(Collectors.toList());
-	}
+    @GetMapping("/all")
+    public @ResponseBody Iterable<User> getAll() {
+        userUtils.verifyHasRole(UserRole.ADMIN);
+        Iterable<UserEntity> allUsers = userRepository.findAll();
+        return StreamSupport.stream(allUsers.spliterator(), false).map(UserMapper::map).toList();
+    }
 
-	@GetMapping("/{userId}")
-	public @ResponseBody Optional<User> get(@PathVariable Long userId) {
-		userUtils.verifyHasRoleOrSelf(userId, UserRole.ADMIN);
-		return userRepository.findById(userId).map(UserMapper::map).map(this::addDevices);
-	}
+    @GetMapping("/{userId}")
+    public @ResponseBody Optional<User> get(@PathVariable Long userId) {
+        userUtils.verifyHasRoleOrSelf(userId, UserRole.ADMIN);
+        return userRepository.findById(userId).map(UserMapper::map).map(this::addDevices);
+    }
 
-	@GetMapping("/getByDevice/{deviceId}")
-	public @ResponseBody User getByDevice(@PathVariable Long deviceId) {
-		UserDevice device = getDevice(deviceId);
-		long userId = device.getUser().getId();
-		userUtils.verifyHasRoleOrSelf(userId, UserRole.ADMIN);
-		User user = userRepository.findById(userId).map(UserMapper::map)
-				.orElseThrow(() -> new NotFoundException(EntityType.USER, userId));
-		return addDevices(user);
-	}
+    @GetMapping("/getByDevice/{deviceId}")
+    public @ResponseBody User getByDevice(@PathVariable Long deviceId) {
+        UserDevice device = getDevice(deviceId);
+        long userId = device.getUser().getId();
+        userUtils.verifyHasRoleOrSelf(userId, UserRole.ADMIN);
+        User user = userRepository.findById(userId).map(UserMapper::map)
+                .orElseThrow(() -> new NotFoundException(EntityType.USER, userId));
+        return addDevices(user);
+    }
 
-	@GetMapping("/device/{deviceId}")
-	public @ResponseBody UserDevice getDevice(@PathVariable Long deviceId) {
-		userUtils.verifyHasRole(UserRole.ADMIN);
-		return userDeviceRepository.findById(deviceId).map(UserDeviceMapper::map)
-				.orElseThrow(() -> new NotFoundException(EntityType.USER_DEVICE, deviceId));
-	}
+    @GetMapping("/device/{deviceId}")
+    public @ResponseBody UserDevice getDevice(@PathVariable Long deviceId) {
+        userUtils.verifyHasRole(UserRole.ADMIN);
+        return userDeviceRepository.findById(deviceId).map(UserDeviceMapper::map)
+                .orElseThrow(() -> new NotFoundException(EntityType.USER_DEVICE, deviceId));
+    }
 
-	@PostMapping("")
-	public @ResponseBody User add(@RequestBody User user) {
-		UserEntity loggedInUser = userUtils.verifyHasRole(UserRole.ADMIN);
-		checkUser(user);
-		String cryptedPassword = encoder.encode(user.getPassword());
-		user.setPassword(cryptedPassword);
-		UserEntity savedUserEntity = userRepository.save(UserMapper.map(user));
-		User savedUser = UserMapper.map(savedUserEntity);
-		protocolRepository.save(new ProtocolEntity(savedUserEntity, ActionType.CREATE, loggedInUser));
-		user.getDevices().forEach(device -> {
-			device.setUser(savedUser);
-			UserDeviceEntity savedDevice = userDeviceRepository.save(UserDeviceMapper.map(device));
-			protocolRepository.save(new ProtocolEntity(savedDevice, ActionType.CREATE, loggedInUser));
-			savedUserEntity.getDevices().add(savedDevice);
-		});
-		return addDevices(savedUser);
-	}
+    @PostMapping("")
+    public @ResponseBody User add(@RequestBody User user) {
+        UserEntity loggedInUser = userUtils.verifyHasRole(UserRole.ADMIN);
+        checkNewUser(user);
+        String cryptedPassword = encoder.encode(user.getPassword());
+        user.setPassword(cryptedPassword);
+        UserEntity savedUserEntity = userRepository.save(UserMapper.map(user));
+        User savedUser = UserMapper.map(savedUserEntity);
+        protocolRepository.save(new ProtocolEntity(savedUserEntity, ActionType.CREATE, loggedInUser));
+        user.getDevices().forEach(device -> {
+            device.setUser(savedUser);
+            UserDeviceEntity savedDevice = userDeviceRepository.save(UserDeviceMapper.map(device));
+            protocolRepository.save(new ProtocolEntity(savedDevice, ActionType.CREATE, loggedInUser));
+            savedUserEntity.getDevices().add(savedDevice);
+        });
+        return addDevices(savedUser);
+    }
 
-	@PostMapping("/device")
-	public @ResponseBody UserDevice add(@RequestBody UserDevice userDevice) {
-		UserEntity loggedInUser = userUtils.verifyHasRoleOrSelf(userDevice.getUser().getId(), UserRole.ADMIN);
-		UserDeviceEntity savedDevice = userDeviceRepository.save(UserDeviceMapper.map(userDevice));
-		protocolRepository.save(new ProtocolEntity(savedDevice, ActionType.CREATE, loggedInUser));
-		return UserDeviceMapper.map(savedDevice);
-	}
+    @PostMapping("/device")
+    public @ResponseBody UserDevice add(@RequestBody UserDevice userDevice) {
+        UserEntity loggedInUser = userUtils.verifyHasRoleOrSelf(userDevice.getUser().getId(), UserRole.ADMIN);
+        UserDeviceEntity savedDevice = userDeviceRepository.save(UserDeviceMapper.map(userDevice));
+        protocolRepository.save(new ProtocolEntity(savedDevice, ActionType.CREATE, loggedInUser));
+        return UserDeviceMapper.map(savedDevice);
+    }
 
-	@PutMapping("/setStatus/{userId}/{status}")
-	public @ResponseBody void setStatus(@PathVariable long userId, @PathVariable ActivationStatus status) {
-		UserEntity loggedInUser = userUtils.verifyHasRole(UserRole.ADMIN);
-		UserEntity dbUser = userRepository.findById(userId)
-				.orElseThrow(() -> new NotFoundException(EntityType.USER, userId));
-		UserEntity saveUser = new UserEntity(dbUser);
-		saveUser.setStatus(status);
-		userRepository.save(saveUser);
-		protocolRepository.save(new ProtocolEntity(saveUser, dbUser, loggedInUser));
-	}
+    @PutMapping("/setStatus/{userId}/{status}")
+    public @ResponseBody void setStatus(@PathVariable long userId, @PathVariable ActivationStatus status) {
+        UserEntity loggedInUser = userUtils.verifyHasRole(UserRole.ADMIN);
+        UserEntity dbUser = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException(EntityType.USER, userId));
+        UserEntity saveUser = new UserEntity(dbUser);
+        saveUser.setStatus(status);
+        userRepository.save(saveUser);
+        protocolRepository.save(new ProtocolEntity(saveUser, dbUser, loggedInUser));
+    }
 
-	@PutMapping("/device/setStatus/{deviceId}/{status}")
-	public @ResponseBody void setDeviceStatus(@PathVariable long deviceId, @PathVariable ActivationStatus status) {
-		UserEntity loggedInUser = userUtils.verifyHasRole(UserRole.ADMIN);
-		UserDeviceEntity device = userDeviceRepository.findById(deviceId)
-				.orElseThrow(() -> new NotFoundException(EntityType.USER_DEVICE, deviceId));
-		device.setStatus(status);
-		userDeviceRepository.save(device);
-		protocolRepository.save(new ProtocolEntity(device, ActionType.MODIFY, loggedInUser));
-	}
+    @PutMapping("/device/setStatus/{deviceId}/{status}")
+    public @ResponseBody void setDeviceStatus(@PathVariable long deviceId, @PathVariable ActivationStatus status) {
+        UserEntity loggedInUser = userUtils.verifyHasRole(UserRole.ADMIN);
+        UserDeviceEntity device = userDeviceRepository.findById(deviceId)
+                .orElseThrow(() -> new NotFoundException(EntityType.USER_DEVICE, deviceId));
+        device.setStatus(status);
+        userDeviceRepository.save(device);
+        protocolRepository.save(new ProtocolEntity(device, ActionType.MODIFY, loggedInUser));
+    }
 
-	@PutMapping("")
-	public @ResponseBody void update(@RequestBody User user) {
-		UserEntity loggedInUser = userUtils.verifyHasRoleOrSelf(user.getId(), UserRole.ADMIN);
-		UserEntity dbUser = userRepository.findById(user.getId())
-				.orElseThrow(() -> new NotFoundException(EntityType.USER, user.getId()));
+    @PutMapping("")
+    public @ResponseBody void update(@RequestBody User user) {
+        UserEntity loggedInUser = userUtils.verifyHasRoleOrSelf(user.getId(), UserRole.ADMIN);
+        checkUser(user);
+        UserEntity dbUser = userRepository.findById(user.getId())
+                .orElseThrow(() -> new NotFoundException(EntityType.USER, user.getId()));
 
-		if (user.getPassword() == null || user.getPassword().isEmpty()) {
-			user.setPassword(dbUser.getPassword());
-		} else {
-			user.setPassword(encoder.encode(user.getPassword()));
-		}
+        if (user.getPassword() == null || user.getPassword().isEmpty()) {
+            user.setPassword(dbUser.getPassword());
+        } else {
+            user.setPassword(encoder.encode(user.getPassword()));
+        }
 
-		if (!UserUtils.hasRole(loggedInUser, UserRole.ADMIN)) {
-			if (user.getRole() != dbUser.getRole()) {
-				throw new AuthorizationException("user cannot modify role.");
-			}
-			if (user.getStatus() != dbUser.getStatus()) {
-				throw new AuthorizationException("user cannot modify status.");
-			}
-		}
+        if (!UserUtils.hasRole(loggedInUser, UserRole.ADMIN)) {
+            if (!user.getName().equals(dbUser.getName())) {
+                throw new AuthorizationException("user cannot modify name.");
+            }
+            if (user.getRole() != dbUser.getRole()) {
+                throw new AuthorizationException("user cannot modify role.");
+            }
+            if (user.getStatus() != dbUser.getStatus()) {
+                throw new AuthorizationException("user cannot modify status.");
+            }
+        }
 
-		UserEntity userEntity = UserMapper.map(user);
-		userRepository.save(userEntity);
-		protocolRepository.save(new ProtocolEntity(userEntity, dbUser, loggedInUser));
-	}
+        UserEntity userEntity = UserMapper.map(user);
+        userRepository.save(userEntity);
+        protocolRepository.save(new ProtocolEntity(userEntity, dbUser, loggedInUser));
+    }
 
-	@DeleteMapping("/{userId}")
-	public void delete(@PathVariable long userId) {
-		setStatus(userId, ActivationStatus.REMOVED);
-	}
+    @DeleteMapping("/{userId}")
+    public void delete(@PathVariable long userId) {
+        setStatus(userId, ActivationStatus.REMOVED);
+    }
 
-	@DeleteMapping("/device/{deviceId}")
-	public void deleteDevice(@PathVariable long deviceId) {
-		setDeviceStatus(deviceId, ActivationStatus.REMOVED);
-	}
+    @DeleteMapping("/device/{deviceId}")
+    public void deleteDevice(@PathVariable long deviceId) {
+        setDeviceStatus(deviceId, ActivationStatus.REMOVED);
+    }
 
-	private User addDevices(User user) {
-		userDeviceRepository.findByUserId(user.getId()).forEach(d -> user.getDevices().add(UserDeviceMapper.map(d)));
-		return user;
-	}
+    private User addDevices(User user) {
+        userDeviceRepository.findByUserId(user.getId()).forEach(d -> user.getDevices().add(UserDeviceMapper.map(d)));
+        return user;
+    }
 
-	private void checkUser(User user) {
-		if (user.getEmail() == null) {
-			throw new BadRequestException("no email");
-		}
-		Optional<UserEntity> dbUser = userRepository.findByNameOrEmail(user.getName(), user.getEmail());
-		if (dbUser.isPresent() && dbUser.get().getId() != user.getId()) {
-			throw new BadRequestException(String.format("user with name '%s' and/or email '%s' already exists.",
-					user.getName(), user.getEmail()));
-		}
-	}
+    private void checkUser(User user) {
+        if (isEmpty(user.getName())) {
+            throw new BadRequestException("user without name not allowed");
+        }
+        if (user.getStatus() == null) {
+            throw new BadRequestException("user without status not allowed");
+        }
+        if (user.getRole() == null) {
+            throw new BadRequestException("user without role not allowed");
+        }
+    }
+
+    private void checkNewUser(User user) {
+        checkUser(user);
+        if (isEmpty(user.getPassword())) {
+            throw new BadRequestException("user without password not allowed");
+        }
+        var email = user.getEmail();
+        if (isEmpty(email)) {
+            email = "INVALID EMAIL IGNORE IN SEARCH";
+        }
+        Optional<UserEntity> dbUser = userRepository.findByNameOrEmail(user.getName(), email);
+        if (dbUser.isPresent() && dbUser.get().getId() != user.getId()) {
+            throw new BadRequestException(String.format("user with name '%s' and/or email '%s' already exists.",
+                    user.getName(), user.getEmail()));
+        }
+    }
+
+    private boolean isEmpty(String s) {
+        return s == null || s.trim().isEmpty();
+    }
 }
